my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EBITRR/EBITRR.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EBITRR.dml:13:9: error EBITRR: bit range of field 'b.r1.f1' outside register boundaries
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EBITRR.dml:18:9: error EBITRR: bit range of field 'b.r2.f1' outside register boundaries
